--- a/style.css
+++ b/style.css
@@ -1,4 +1,81 @@
 body{
     font-family: 'Lato', sans-serif;
+    margin: 0px;
 }
 
+.fonts{
+    font-size: 20px;
+}
+
+h1{
+    font-size: 50px;
+}
+
+h3{
+    font-size: 35px;
+}
+
+.orange-color{
+    color: orange
+}
+
+.blue{
+    color: darkblue;
+}
+
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+}
+
+.half-width img{
+    width: 90%;
+}
+
+.container{
+    display: flex;
+    margin-bottom: 150px;
+}
+
+.banner-top{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+
+}
+
+.links-button{
+    background-image: linear-gradient(orange,tomato);
+    text-decoration: none;
+    padding: 10px 40px;
+    color: whitesmoke;
+    font-weight: 700;
+    border-radius: 10px;
+}
+
+.dream-part{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-right: 5%;
+}
+
+.experience-part{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    position: left;
+}
+
+.box-part{
+    width: 45%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 10px;
+    border-radius: 10px;
+    box-shadow: 10px 15px gray;
+}
+
+footer{
+    font-size: 20px;
+    color: darkblue;
+    text-align: center;
+}
